# tcp-server-and-client

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
src/: logger.cpp  logger.h
src/client/: client.cpp  client.h  client_main.cpp
src/server/: server.cpp  server.h  server_main.cpp
src/shared/: constants.h  structs.cpp  structs.h  type_aliases.h
tests/: acceptance_tests.cpp  logger_tests.cpp
